crates/backends/sqlite/tests/snapshots/sqlite__table_features.snap
---
source: crates/backends/sqlite/tests/sqlite.rs
expression: snapshot
---
id: app
display_name: ~
catalog:
  namespaces:
    - name: main
      comment: ~
  tables:
    - namespace: main
      name: measurements
      comment: ~
      columns:
        - name: id
          data_type: INTEGER
          nullable: false
          default: ~
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
        - name: width
          data_type: REAL
          nullable: false
          default: ~
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
        - name: height
          data_type: REAL
          nullable: false
          default: ~
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
        - name: area
          data_type: REAL
          nullable: true
          default: ~
          comment: ~
          kind: virtual_generated
          collation: BINARY
          generated_expression: width * height
        - name: dimensions
          data_type: TEXT
          nullable: true
          default: ~
          comment: ~
          kind: stored_generated
          collation: BINARY
          generated_expression: "width || 'x' || height"
      constraints:
        - name: ~
          kind: primary_key
          columns:
            - id
          expression: ~
          references: ~
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
        - name: ~
          kind: not_null
          columns:
            - id
          expression: ~
          references: ~
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
        - name: ~
          kind: not_null
          columns:
            - width
          expression: ~
          references: ~
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
        - name: ~
          kind: not_null
          columns:
            - height
          expression: ~
          references: ~
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      indexes: []
      without_rowid: false
      strict: true
      definition: "CREATE TABLE measurements (\n    id INTEGER PRIMARY KEY NOT NULL,\n    width REAL NOT NULL,\n    height REAL NOT NULL,\n    area REAL GENERATED ALWAYS AS (width * height) VIRTUAL,\n    dimensions TEXT GENERATED ALWAYS AS (width || 'x' || height) STORED\n) STRICT"
      kind:
        kind: ordinary
    - namespace: main
      name: settings
      comment: ~
      columns:
        - name: key
          data_type: TEXT
          nullable: false
          default: ~
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
        - name: locale
          data_type: TEXT
          nullable: false
          default: ~
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
        - name: value
          data_type: TEXT
          nullable: true
          default: ~
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
      constraints:
        - name: ~
          kind: not_null
          columns:
            - key
          expression: ~
          references: ~
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
        - name: ~
          kind: not_null
          columns:
            - locale
          expression: ~
          references: ~
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
        - name: ~
          kind: primary_key
          columns:
            - key
            - locale
          expression: ~
          references: ~
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: false
      indexes:
        - name: sqlite_autoindex_settings_1
          unique: true
          terms:
            - target:
                column: key
              collation: BINARY
              order: ascending
            - target:
                column: locale
              collation: BINARY
              order: ascending
          predicate: ~
          definition: ~
          origin: primary_key
      without_rowid: true
      strict: false
      definition: "CREATE TABLE settings (\n    key TEXT NOT NULL,\n    locale TEXT NOT NULL,\n    value TEXT,\n    PRIMARY KEY (key, locale)\n) WITHOUT ROWID"
      kind:
        kind: ordinary
  views: []
  triggers: []
